# wm-dashboard

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: daily-summary.yml  fetch-prices.yml  keep-alive.yml
.streamlit/: config.toml
config/: benchmarks.yaml  ips.yaml  positions.yaml  targets.yaml  tickers.yaml  triggers.yaml
data/: history.parquet  prices.json  trigger_history.yaml
data/reports/: DailyReport_2026-04-13.docx  DailyReport_2026-04-14.docx  DailyReport_2026-04-16.docx  DailyReport_2026-04-20.docx  DailyReport_2026-04-21.docx  DailyReport_2026-04-23.docx  DailyReport_2026-04-24.docx  DailyReport_2026-04-27.docx  DailyReport_2026-04-28.docx  DailyReport_2026-04-29.docx  DailyReport_2026-04-30.docx  DailyReport_2026-05-01.docx  DailyReport_2026-05-04.docx  DailyReport_2026-05-05.docx  DailyReport_2026-05-06.docx  DailyReport_2026-05-07.docx  DailyReport_2026-05-08.docx  DailyReport_2026-05-11.docx  DailyReport_2026-05-12.docx  DailyReport_2026-05-13.docx  DailyReport_2026-05-14.docx  DailyReport_2026-05-15.docx  DailyReport_2026-06-05.docx  DailyReport_2026-06-08.docx  DailyReport_2026-06-17.docx  DailyReport_2026-06-25.docx  DailyReport_2026-06-26.docx  (+6 more)
scripts/: daily_summary.py  evaluate_triggers.py  export_positions.py  fetch_prices.py  publish.sh  reconcile_triggers.py  sync_reports.py
tests/: conftest.py  test_fetch_prices.py  test_forecast.py  test_ips_check.py  test_notifications.py  test_price_providers.py  test_prices_loader.py  test_tracker_yaml_fallback.py  test_twr.py  test_whatif.py  test_yahoo_search.py
(+13 files in other folders)
